[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/coin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Coins.gd" type="Script" id=2]
[ext_resource path="res://SFX/coins.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node2D" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.96046e-07, 5.96046e-07 )
scale = Vector2( 1.24803, 1.24803 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
